# superdocs-python

./: .gitignore  README.md  base_page.txt  code_executor.py  condensers.py  external_retrieval.py  internal_retriever.py  logs.txt  main.py  match_logs.txt  mini.py  pyproject.toml  refinement.py
big/: code_executor.py  condensers.py  main.py  refinement.py  requirements.txt  retriever.py
big/utils/: codebase.py  diff_parser.py  mcts.py  model.py  prompts.py  search_and_replace.py
superdocs/: code_executor.py  codebase.py  codebase_retrieval.py  condensers.py  external_retrieval.py  internal_retriever.py  main.py  refinement.py
superdocs/server/: __init__.py
superdocs/utils/: code_executor_prompts.py  codebase.py  gpt_output_utils.py  search_and_replace.py  tree_sitter_utils.py
superdocs_python/: chunked_rewrite.py  code_executor.py  diff_test.py  main.py  mini.py  retriever.py
superdocs_python/utils/: diff_utils.py  file_lats.py  mcts.py  model.py  node.py  prompts.py  text_lats.py
superdocs_python/utils/modelgen/: create_dataset_patch.ipynb  create_dataset_with_plan.py  create_search_replace_dataset_without_plan.ipynb  create_sub_dataset_with_plans.ipynb  evaluate_generation.py  generate_balanced_ds.ipynb
superdocs_python/utils/modelgen/datasets/plan_to_sr_v2/: data-00000-of-00001.arrow  dataset_info.json  state.json
superdocs_python/utils/modelgen/search_replace_dataset/: dataset_info.json  state.json
utils/: prompts.py  tree_sitter_utils.py
